# attention-oracle-program

./: .env.example  .gitignore  AGENTS.md  AGENT_HANDOFF.md  AI_REVIEW_KIT.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_SUMMARY.md  ATTENTION_ORACLE_ARCHITECTURE.md  ATTENTION_ORACLE_README.md  AUDIT_REPORT.md  AUTOMATION_STATUS.md  Anchor.toml  Anchor.toml.tmp  CLAIM_0001_SUCCESS.md  CLAIM_INTEGRATION_GUIDE.md  CLAIM_SUBMISSION_STATUS.md  CLAIM_UI_BUILD_SUMMARY.md  CLAUDE.md  CLS_ALLOCATION_PIPELINE_SUMMARY.md  CLS_DEPLOYMENT_CHECKLIST.md  CLS_E2E_TEST_RUNBOOK.md  CLS_MAINNET_LAUNCH_GUIDE.md  CLS_PIPELINE_EXECUTION_GUIDE.md  CLS_PRODUCTION_SYSTEM.md  COMPLETION_REPORT.md  COMPLIANCE.md  CONTRACT_COMPARISON_ANALYSIS.md  CRITICAL_FILES_FOR_AI_REVIEW.txt  Cargo.toml  DB_HEALTH_SUMMARY.md  DB_MAINTENANCE_ADDENDUM.md  DECISION_LOG.md  DEPLOYMENTS.md  DEPLOYMENT_AUDIT_20251118.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_DOCUMENTATION_INDEX.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  (+137 more)
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  pull_request_template.md
.well-known/: security.txt
ai-review/: 00-README.md  01-db-inventory.txt  02-row-counts.txt  03-server.ts  04-claim.ts  05-eligibility.ts  06-irc-collector.ts  (+5 more)
apps/twzrd-aggregator-rs/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml
apps/twzrd-aggregator-rs/src/: main.rs  state.rs
apps/twzrd-aggregator-rs/src/api/: mod.rs
apps/twzrd-aggregator-rs/src/ingest/: mod.rs
apps/twzrd-aggregator-rs/src/merkle/: mod.rs
programs/: Cargo.toml  rust-toolchain.toml
programs/ao-v2/: Cargo.toml
programs/ao-v2/src/: error.rs  keccak.rs  klend.rs  lib.rs  state.rs
programs/ao-v2/src/instructions/: admin.rs  channel_staking.rs  compound.rs  global.rs  governance.rs  markets.rs  mod.rs  price_feed.rs  strategy.rs  stream.rs  vault.rs
programs/ao-v2/tests/: litesvm_compound.rs  litesvm_lifecycle.rs
programs/attention-oracle/: CHANGELOG.md  Cargo.lock.fresh  Cargo.toml
programs/attention-oracle/src/: constants.rs  error.rs  errors.rs  events.rs  keccak.rs  klend.rs  lib.rs  merkle_proof.rs  state.rs  token_transfer.rs
programs/attention-oracle/src/instructions/: admin.rs  channel_staking.rs  claim.rs  global.rs  governance.rs  initialize_mint.rs  markets.rs  mod.rs  price_feed.rs  signal.rs  staking.rs  strategy.rs  vault.rs  velocity_feed.rs
programs/attention-oracle/tests/: claim_open_tiered.rs  litesvm_cumulative.rs  litesvm_global.rs  litesvm_lifecycle.rs  litesvm_markets.rs  litesvm_staking.rs  litesvm_sunset.rs  litesvm_vault.rs
programs/attention_oracle_program/: Cargo.toml
programs/attention_oracle_program/src/: lib.rs
programs/ccm_hook/: Cargo.toml
programs/ccm_hook/src/: lib.rs
programs/channel-vault/: Cargo.toml  DEPLOYMENTS.md
programs/channel-vault/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/channel-vault/src/instructions/: admin.rs  close.rs  compound.rs  deposit.rs  exchange_rate.rs  initialize.rs  metadata.rs  migrate_oracle_position.rs  mod.rs  redeem.rs  transfer_authority.rs
programs/channel-vault/tests/: cpi_integration.rs  vault_logic.rs
programs/lofi-bank/: Cargo.toml  rust-toolchain.toml
programs/lofi-bank/src/: lib.rs
programs/src/: events.rs  lib.rs  state.rs
programs/src/instructions/: channel.rs  claim.rs  cnft_verify.rs  governance.rs  initialize_mint.rs  merkle_ring.rs
programs/token-2022/: Cargo.toml
programs/token-2022/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/token-2022/src/instructions/: admin.rs  channel.rs  claim.rs  cleanup.rs  cnft_verify.rs  governance.rs  hooks.rs  initialize_mint.rs  liquidity.rs  merkle.rs  merkle_ring.rs  mod.rs  passport.rs  points.rs
programs/token_2022/: Cargo.toml  rust-toolchain.toml
programs/token_2022/src/: constants.rs  errors.rs  events.rs  lib.rs  merkle_proof.rs  state.rs  state_full.rs  token_transfer.rs
programs/token_2022/src/instructions/: admin.rs  channel.rs  channel_staking.rs  claim.rs  claim_sponsored.rs  claim_stake.rs  cleanup.rs  cleanup_epoch.rs  cnft_verify.rs  creator.rs  cumulative.rs  extra_account_metas.rs  gated.rs  global.rs  governance.rs  hooks.rs  initialize_mint.rs  liquidity.rs  markets.rs  merkle.rs  merkle_ring.rs  migrate.rs  migrate_channel.rs  mod.rs  passport.rs  points.rs  push_distribute.rs  resize_channel.rs  stake_nft.rs  staking.rs
programs/token_2022/src/instructions/_archive/: staking.rs
programs/token_2022/tests/: litesvm_cumulative.rs  litesvm_global.rs  litesvm_markets.rs  litesvm_staking.rs
programs/wzrd-markets/: Cargo.toml
programs/wzrd-markets/src/: error.rs  events.rs  lib.rs  resolution.rs  state.rs
programs/wzrd-markets/src/curve/: calculator.rs  checked_math.rs  constant_product.rs  mod.rs
programs/wzrd-markets/tests/: complete_set.rs  config_init.rs  pool_swap.rs  resolution.rs
programs/wzrd-rails/: AUDIT_REPORT.md  AUDIT_REPORT_PREPUSH.md  Cargo.toml  DEPLOY_RUNBOOK.md
programs/wzrd-rails/src/: error.rs  lib.rs  listen_payout.rs  state.rs
programs/wzrd-rails/tests/: core_loop.rs  listen_payout_e2e.rs
programs/x402-on-demand/: Cargo.toml
programs/x402-on-demand/src/: lib.rs
rust-packages/: Cargo.toml
rust-packages/twzrd-cli/: Cargo.toml  README.md
rust-packages/twzrd-cli/src/: main.rs
rust-packages/twzrd-sdk/: Cargo.toml  README.md
rust-packages/twzrd-sdk/src/: lib.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
verify-snapshot/: Cargo.toml
verify-snapshot/token-2022/: Cargo.toml  LICENSE  README.md
verify-snapshot/token-2022/src/: errors.rs  events.rs  lib.rs  state.rs  state_full.rs
verify-snapshot/token-2022/src/instructions/: admin.rs  channel.rs  claim.rs  cleanup.rs  cnft_verify.rs  governance.rs  hooks.rs  initialize_mint.rs  merkle.rs  merkle_ring.rs  mod.rs  passport.rs  points.rs  switchboard_price.rs
verify-snapshot/token-2022/tests/: basic_compile_test.rs  helpers.rs  probe_ring.rs  ring_end_to_end.rs  ring_logic_test.rs  test_dynamic_fees.rs  unit_tests.rs
(+598 files in other folders)
