[workspace]
members = [
  "programs/ao-v2",
]
# Legacy programs kept for reference (source only, not built).
# attention-oracle: Anchor-based predecessor, replaced by ao-v2 (Pinocchio).
# channel-vault: Still deployed at 5WH4..., awaiting Pinocchio port.
exclude = [
  "programs/attention-oracle",
  "programs/channel-vault",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
