[workspace]
members = [
  "programs/attention-oracle",
  "programs/wzrd-rails",
]
resolver = "2"

# Pin to avoid edition2024 breakage on SBF toolchain (Cargo 1.84)
[workspace.dependencies]
constant_time_eq = "=0.3.1"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
