[package]
name = "token-2022"
version = "0.1.0"
description = "Token-2022 claim + transfer-hook (brand-neutral)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Optional, off by default to minimize on-chain surface
passport = []
points = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
bytemuck = "1.14" # required by Anchor's zero_copy derive
# Anchor >= 0.32 re-exports `solana_program`; keep imports via `anchor_lang::solana_program`
# to avoid version skew. No direct `solana-program` dependency is needed here.
mpl-bubblegum = "2.1.0"
solana-security-txt = "1"
sha3 = "0.10"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler
overflow-checks = false
