## Production-ready crate config (Agave 3.0 + Rust 1.89)
[package]
name = "attention-oracle-token-2022"
version = "0.2.0"
description = "Verifiable Distribution Protocol (Token-2022)"
edition = "2021"
rust-version = "1.89"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Optional, off by default to keep binary lean
receipts = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program = "2.3.0"
spl-token-2022 = "5.0.2"
spl-transfer-hook-interface = "0.6.0"
spl-tlv-account-resolution = "0.6.0"
spl-pod = "0.2.0"
bytemuck = "1.19"
sha3 = "0.10"
solana-security-txt = "1.1"
mpl-bubblegum = { version = "2.1.0", features = ["no-entrypoint"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true
