[workspace]
members = ["token-2022"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
toml_datetime = "=0.6.5"
toml_edit = "=0.21.0"
toml = "=0.8.2"
toml_parser = "=0.3.0"
