[package]
name = "twzrd-aggregator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core Framework ---
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# --- Database (Postgres) ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

# --- Solana / Anchor ---
solana-sdk = "2.3.0"
solana-client = "2.3.0"
solana-account-decoder = "2.3.0"
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"

# --- The Clean Core (Public Repo) ---
# NOTE: The actual crate name and path may need adjustment once building.
attention-oracle-token-2022 = { path = "../../programs/token_2022", features = ["cpi", "no-entrypoint"], optional = true }

# --- Cryptography (Merkle Trees) ---
sha3 = "0.10"

[features]
default = []
core-types = ["attention-oracle-token-2022"]
