[package]
name = "attention-oracle"
version = "2.0.0"
edition = "2021"
rust-version = "1.84"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
channel_staking = []
strategy = []
prediction_markets = []
price_feed = []
localtest = []

[dependencies]
pinocchio = "0.9"

[dev-dependencies]
litesvm = "0.10"
solana-sdk = "=2.2.1"
solana-account = "=3.4.0"
solana-address = "=2.2.0"
solana-instruction = "=3.2.0"
solana-keypair = "=3.1.2"
solana-message = "=3.1.0"
solana-signer = "=3.0.0"
solana-transaction = "=3.1.0"
sha2 = "0.10"
sha3 = "0.10"
spl-token-2022 = "8.0.1"
solana-system-interface = "1.0"
