[package]
name = "attention-oracle-token-2022"
version = "0.3.0"
description = "Liquid Attention Protocol — Permissionless Attention Markets on Solana"
edition = "2021"
rust-version = "1.84"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022"

[features]
default = ["security-txt", "phase2"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
security-txt = []
phase2 = ["channel_staking", "prediction_markets", "strategy", "price_feed"]
channel_staking = []
prediction_markets = []
strategy = []
price_feed = []
localtest = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
borsh = "0.10"
bytemuck = "1.19"
sha3 = "0.10"
solana-security-txt = "1.1"

[dev-dependencies]
solana-sdk = "=2.2.1"
solana-account = "=3.4.0"
solana-address = "=2.2.0"
solana-instruction = "=3.2.0"
solana-keypair = "=3.1.2"
solana-message = "=3.1.0"
solana-signer = "=3.0.0"
solana-system-interface = "1.0"
solana-transaction = "=3.1.0"
litesvm = "0.10"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
sha2 = "0.10"
spl-token-2022 = "8.0.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docsrs)'] }
