[package]
name = "attention-oracle-program"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "attention_oracle_program"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
sha3 = "0.10"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docsrs)'] }
