[package]
name = "attention-oracle-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
strip = false
