[package]
name = "ccm_hook"
version = "0.1.0"
description = "CCM Transfer Hook - Logs transfers and enables fee collection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccm_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022", "token_2022_extensions"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
spl-type-length-value = "0.6"
