[package]
name = "ccm_hook"
version = "0.1.0"
description = "CCM Transfer Hook - Logs transfers and enables fee collection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccm_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Anchor's proc-macros emit these cfg flags; declare them to silence `unexpected_cfgs`.
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
solana-program = "2.3.0"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
spl-type-length-value = "0.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docsrs)', 'cfg(target_os, values("solana"))'] }
