[package]
name = "lofi-bank"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lofi_bank"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Anchor's proc-macros emit these cfg flags; declare them to silence `unexpected_cfgs`.
anchor-debug = []
custom-heap = []
custom-panic = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "token_2022"] }
