[package]
name = "attention-oracle-token-2022"
version = "0.2.0"
description = "Verifiable Distribution Protocol (Token-2022)"
edition = "2021"
rust-version = "1.84"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022"

[features]
default = ["security-txt"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
security-txt = []
receipts = []
# Legacy feature removed
demo = []
migration = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
bytemuck = "1.19"
sha3 = "0.10"
solana-security-txt = "1.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(docsrs)'] }
