[package]
name = "twzrd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for TWZRD Attention Oracle"
keywords = ["solana", "attention", "oracle", "cli", "twzrd"]
categories = ["command-line-utilities"]

[[bin]]
name = "twzrd"
path = "src/main.rs"

[dependencies]
twzrd-sdk = { path = "../twzrd-sdk" }
solana-sdk.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
