[package]
name = "attention-oracle-sdk"
version = "0.2.0"
edition = "2021"
authors = ["twzrd-sol"]
license = "MIT OR Apache-2.0"
description = "Rust SDK for Attention Oracle program on Solana"
repository = "https://github.com/twzrd-sol/attention-oracle-program"
keywords = ["solana", "blockchain", "token", "merkle", "claims"]
categories = ["cryptography", "api-bindings"]

[dependencies]
solana-program = "2.3.0"
solana-sdk = "2.3.0"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
spl-token-2022 = "6.0"
borsh = "1.5"
bytemuck = "1.14"
sha3 = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.3.0"
tokio = "1.35"

[lib]
crate-type = ["lib"]
