[package]
name = "token-2022"
version = "0.1.0"
description = "Token-2022 claim + transfer-hook (brand-neutral)"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Optional, off by default to minimize on-chain surface
passport = []
points = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
bytemuck = "1.14"
solana-program = "1.18"
mpl-bubblegum = "1.4"
spl-noop = "0.2"
solana-security-txt = "1"

[dev-dependencies]
solana-program-test = "1.18.17"
solana-sdk = "1.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
spl-token-2022 = "1.0.0"
spl-associated-token-account = "1.0.3"

